--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:theme="@style/Theme.Recipe_application"
         tools:targetApi="31">
         <activity
-            android:name=".viewmodel.ScreenLogin"
-            android:exported="false" />
+            android:name=".view.ScreenLogin"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
