--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Recipe_application"
         tools:targetApi="31">
         <activity
+            android:name=".view.ScreenDashboard"
+            android:exported="true" />
+        <activity
             android:name=".view.ScreenLogin"
             android:exported="true" />
         <activity
