--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.Recipe_application"
         tools:targetApi="31">
         <activity
+            android:name=".activity.BaseActivity"
+            android:exported="true"
+            android:label="@string/title_activity_base"
+            android:theme="@style/Theme.Recipe_application" />
+        <activity
             android:name=".view.ScreenDashboard"
             android:exported="true" />
         <activity
