--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,7 @@
         tools:targetApi="31">
         <activity
             android:name=".activity.BaseActivity"
-            android:exported="true"
-            android:label="@string/title_activity_base"
-            android:theme="@style/Theme.Recipe_application" />
+            android:exported="true" />
         <activity
             android:name=".view.ScreenDashboard"
             android:exported="true" />
